[package]
name = "clockrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
color-eyre = "0.5.11"
rusqlite = "0.26.1"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
#hyper = { version = "0.14", features = ["full"] }
#tokio = { version = "1", features = ["full"] }

